# python-programming-tools

./: .gitingore  szyfry_podmieniane.py
continous-integration/: .pre-commit-config.yaml  setup.cfg
continous-integration/.github/workflows/: tests.yml
creating-package/: .gitignore  Readme.rst  classes.ipynb
creating-package/package1/: setup.py  simple_package1.py
creating-package/package2/: setup.py  simple_package2.py
creating-package/package3/: Readme.rst  setup.cfg
creating-package/package3/simple_package3/: __init__.py
creating-package/package4/: setup.cfg
creating-package/package4/simple_package4/: __init__.py  text.txt
creating-package/package5/: data.toml  pyproject.toml  setup.cfg  setup.py
creating-package/package5/simple_package5/: __init__.py
creating-package/package6_moo/: setup.cfg
creating-package/package6_moo/moo/: moo.py
creating-package/package7/: setup.cfg
creating-package/package7/simple_package7/: __init__.py
debugger/: .gitignore  Readme.rst
debugger/code/excel_date_problem/: excel_read.py  table.csv
homework-package/: .gitignore
homework_package/: LICENSE  setup.cfg
iris/: result.csv  run_analysis.py
iris/iris_analysis/: calculate.py
iris/iris_analysis/io/: __init__.py  (+2 more)
jupyter/: .gitignore  Readme.md  class.ipynb  code_for_profile.py  jupyter-profiling.ipynb  presentation.ipynb  sample_module.py
numba-cython/: classes.ipynb
numpy/: classes.ipynb  exercise-3.py
pandas/: Classes.ipynb  exercise_7.py  iris.xlsx  iris2.xlsx
testing/: .gitignore
testing-homework-master/: homework.py  test_homework.py
(+5 files in other folders)
