[metadata]
name = homework-package
description = My first package
long_description = file: README.rst
author = Mateusz Machnowski
author_email = ma.machnowsk@student.uw.edu.pl
license = MIT licence
classifiers =
    'Development Status :: 1 - Planning'
    'Intended Audience :: Science/Research'
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python :: 3'

[options]
packages = find:

